// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValidationMessage renders the component with all required props 1`] = `
.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin-right: 0.25rem;
}

.emotion-0 {
  display: inline-block;
  fill: #DA294A;
  height: 18px;
  width: 18px;
}

.emotion-2 {
  margin: 0;
  padding: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 400;
  color: #DA294A;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

<div
  class="emotion-3"
  data-test-id="cf-ui-validation-message"
>
  <div
    class="emotion-1"
  >
    <svg
      aria-label="Validation message"
      class="emotion-0"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
  </div>
  <p
    class="emotion-2"
  >
    This field is required
  </p>
</div>
`;

exports[`ValidationMessage renders the component with an additional class name 1`] = `
.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin-right: 0.25rem;
}

.emotion-0 {
  display: inline-block;
  fill: #DA294A;
  height: 18px;
  width: 18px;
}

.emotion-2 {
  margin: 0;
  padding: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 400;
  color: #DA294A;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

<div
  class="my-extra-class emotion-3"
  data-test-id="cf-ui-validation-message"
>
  <div
    class="emotion-1"
  >
    <svg
      aria-label="Validation message"
      class="emotion-0"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
  </div>
  <p
    class="emotion-2"
  >
    This field is required
  </p>
</div>
`;
